Breathe: Prevent .o2-app-controls from being mostly hidden by heading.
Props SergeyBiryukov.
Fixes #2411.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4810 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -277,7 +277,7 @@ aside[id^="handbook"] .widget-title {
 }
 
 .o2-app-page-title {
-  margin: 0 0 10px 0 !important;
+  margin: 0 0 1.5em 0 !important;
   padding: 0;
   font-weight: 400;
   font-size: 2.2em;
